# borginDogsAssigmnet

./: CMakeLists.txt  README.md  main.cpp
Cat/: Cat.cpp  Cat.h
Dog/: Dog.cpp  Dog.h
HotelRoom/: HotelRoom.cpp  HotelRoom.h
Pet/: Pet.cpp  Pet.h
PetHotelManager/: PetHotelManager.cpp  PetHotelManager.h
